# Ynara

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  IDENTITY.md  LICENSE  Makefile  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json  ynara.config.json
.github/: CODEOWNERS  (+1 more)
apps/backend/: .env.example  AGENTS.md  AUDITORIA-BACKEND-2026-06-20.md  AUDITORIA-BACKEND-2026-06-23.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260529_1949_initial_schema.py  20260602_1015_audit_log_block_update_trigger.py  20260614_1700_conversation_turns_table.py  20260615_0200_drop_redundant_conversation_turns_indexes.py  20260619_1200_add_is_admin_and_admin_audit.py  20260620_2200_index_operational_date_columns.py  20260622_1200_calendar_events_table.py  20260622_1400_tasks_table.py  20260623_1200_index_episodic_occurred_at.py  20260624_1200_index_memory_created_at.py  20260624_1400_index_tasks_user_id_scheduled_at.py  20260625_1000_users_time_zone.py  20260625_1100_device_tokens_table.py  20260625_1200_reminders_table.py  20260628_1200_users_preferences.py
apps/backend/app/: __init__.py  enums.py  main.py
apps/backend/app/api/: __init__.py
apps/backend/app/calendar/: __init__.py  store.py
apps/backend/app/core/: __init__.py  config.py  constants.py  crypto.py  db_guard.py  deps.py  llm_protocol.py  observability.py  paths.py  ratelimit.py  security.py  timezones.py  token_store.py
apps/backend/app/llm/: __init__.py  config.py  context.py  errors.py  memory_engine.py  router.py  schemas.py  text_utils.py  tool_loop.py
apps/backend/app/memory/: __init__.py  audit.py  config.py  conversation_turns.py  embedding.py  episodic.py  hashing.py  procedural.py  semantic.py
apps/backend/app/models/: __init__.py  admin_audit.py  audit.py  base.py  calendar_event.py  conversation_turn.py  device_token.py  memory.py  reminder.py  session.py  task.py  user.py
apps/backend/app/schemas/: __init__.py  admin.py  admin_api.py  audit.py  auth.py  base.py  calendar_event.py  calendar_event_api.py  chat.py  conversation_turn.py  device.py  memory.py  memory_api.py  onboarding.py  reminder.py  reminder_api.py  session.py  session_api.py  task.py  task_api.py  today.py  user.py
apps/backend/app/services/: __init__.py  admin_metrics.py  auth.py  calendar.py  chat.py  devices.py  memory.py  notifications.py  onboarding_seed.py  reminders.py  tasks.py  today.py
apps/backend/app/tasks/: __init__.py  store.py
apps/backend/app/workers/: __init__.py  celery_app.py
apps/backend/app/workflows/: __init__.py  _engine.py  agent_pass.py  audit_retention.py  consolidation.py  decay.py  episodic_retention.py  reminder_dispatch.py
apps/backend/docs/: ENDPOINTS.md  MIGRATIONS.md  MODELS.md  README.md  TOOLS.md
apps/backend/scripts/: check_doc_catalogs.py  run-local.ps1  run-local.sh
apps/backend/tests/: __init__.py  conftest.py  test_db_guard.py
apps/backend/tests/api/: test_admin_audit.py  test_admin_auth.py  test_admin_connectivity.py  test_admin_playground.py  test_auth.py  test_chat.py  test_chat_stream.py  test_chat_turns.py  test_client_deps.py  test_devices.py  test_events.py  test_health.py  test_memory.py  test_memory_audit.py  test_memory_search.py  test_modes.py  test_onboarding.py  test_onboarding_memory_seed.py  test_reminders.py  test_security_headers.py  test_sessions.py  test_sessions_close.py  test_sessions_close_episodic.py  test_sessions_lifecycle.py  test_tasks.py  test_today.py  test_users.py
apps/backend/tests/calendar/: test_calendar_store.py
apps/backend/tests/core/: test_client_ip.py  test_config.py  test_crypto.py  test_deps_auth.py  test_deps_engine.py  test_observability.py  test_paths.py  test_ratelimit.py  test_security.py  test_token_store.py
apps/backend/tests/integration/: test_audit_log.py  test_audit_retention.py  test_audit_writes.py  test_episodic_retention.py
apps/backend/tests/llm/: conftest.py  test_calendar_tool.py  test_circuit.py  test_config.py  test_context.py  test_datetime_context.py  test_embedding.py  test_embedding_vllm.py  test_errors.py  test_factory.py  test_fakes.py  test_memory_engine.py  test_memory_engine_summarize.py  test_memory_tool.py  test_parsers.py  test_pool.py  test_prompts.py  test_reminder_tool.py  test_reranker.py  test_reranker_vllm.py  test_resilient.py  test_router.py  test_schemas.py  test_task_tool.py  test_text_utils.py  test_tool_loop.py  test_tools.py  test_vllm_client.py
apps/backend/tests/memory/: test_config.py  test_conversation_turns.py  test_embedding.py  test_hashing.py  test_memory_integration.py  test_memory_unit.py
apps/backend/tests/migrations/: test_conversation_turns_migration.py  test_device_tokens_migration.py  test_drop_redundant_indexes_migration.py  test_index_episodic_occurred_at_migration.py  test_index_memory_created_at_migration.py  test_index_operational_date_columns_migration.py  test_index_tasks_user_id_scheduled_at_migration.py  test_initial_schema.py  test_reminders_migration.py  test_users_time_zone_migration.py
apps/backend/tests/models/: test_enum_pg_values.py  test_enum_roundtrip_pg.py  test_metadata_completeness.py
apps/backend/tests/schemas/: test_api_schemas.py  test_audit.py  test_calendar_event.py  test_chat.py  test_memory.py  test_task.py  test_user.py
apps/backend/tests/scripts/: test_check_doc_catalogs.py
apps/backend/tests/services/: test_admin_metrics_moat.py  test_admin_metrics_values.py  test_auth_service.py  test_calendar_store.py  test_chat_persist_turns.py  test_chat_service.py  test_devices.py  test_notifications.py  test_reminders.py  test_task_store.py  test_today.py
apps/backend/tests/tasks/: test_task_store.py
apps/backend/tests/workers/: test_celery_app.py  test_task_registration.py
apps/backend/tests/workflows/: test_agent_pass.py  test_agent_pass_task.py  test_consolidation.py  test_decay.py  test_engine.py  (+3 more)
(+809 files in other folders)
