[project]
name = "ynara-backend"
version = "0.1.0"
description = "Backend de Ynara — FastAPI + LLM + memoria"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115.0",
    # starlette pineado al floor de seguridad: PYSEC-2026-161 (path injection vía Host
    # header -> posible auth-bypass cuando la auth depende de la URL reconstruida; Ynara
    # usa JWT, exposición baja). fastapi declara starlette>=0.46.0 sin techo, así que
    # 1.0.1 entra sin bumpear fastapi. Mantener este floor al re-lockear.
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]
llm-local = [
    "vllm>=0.6.0",
    "unsloth",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------- Ruff --------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC",
    "S",   # bandit
    "RUF",
]
ignore = [
    "S101", # assert OK en tests
    "B008", # FastAPI Depends() en defaults es estándar
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

# -------------------- Pytest --------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: requiere servicios externos (DB real, etc.); excluido del run default",
]

# -------------------- Coverage --------------------

# El piso (--cov-fail-under) NO va acá: se aplica en CI sobre la cobertura
# COMBINADA unit+integration (ci.yml). En addopts rompería el run default
# (solo unit), que no ejercita endpoints/DB y mide bajo a propósito.
[tool.coverage.run]
source = ["app"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
