[project]
name = "ynara-backend"
version = "0.1.0"
description = "Backend de Ynara — FastAPI + LLM + memoria"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115.0",
    # starlette pineado al floor de seguridad: PYSEC-2026-161 (path injection vía Host
    # header -> posible auth-bypass cuando la auth depende de la URL reconstruida; Ynara
    # usa JWT, exposición baja). fastapi declara starlette>=0.46.0 sin techo, así que
    # 1.0.1 entra sin bumpear fastapi. Mantener este floor al re-lockear.
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # JWT con PyJWT (no python-jose: sin mantenimiento desde 2021 + CVE-2024-33664
    # `denial of service` por claim `jwt` anidado; Ynara solo usa HS256 simétrico, así
    # que `pyjwt` pelado alcanza —el extra [crypto] solo hace falta para RS*/ES*/EdDSA).
    "pyjwt>=2.9.0",
    # bcrypt directo (dependencia de primer nivel, no transitiva): el código hashea con
    # `bcrypt.hashpw`/`checkpw` directo en core/security.py. passlib 1.7.4 no es compatible
    # con bcrypt 4.x y no se usaba, así que se saca.
    "bcrypt>=4.1.0",
    # cryptography directo (dependencia de primer nivel, no transitiva): app/core/crypto.py
    # importa AESGCM + HKDF + hashes para el cifrado AES-256-GCM per-user (ADR-007 D3).
    # Antes entraba transitiva via authlib; al sacar authlib (#366) hay que declararla
    # explicita o un `uv sync` fresco no la instala (la usa el código, así que la declara).
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]
llm-local = [
    "vllm>=0.6.0",
    "unsloth",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------- Ruff --------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC",
    "S",   # bandit
    "RUF",
]
ignore = [
    "S101", # assert OK en tests
    "B008", # FastAPI Depends() en defaults es estándar
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

# -------------------- Pytest --------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: requiere servicios externos (DB real, etc.); excluido del run default",
    "llm_smoke: smoke contra un Ollama real (opt-in via YNARA_OLLAMA_SMOKE=1); skippeado por defecto, no hace red en el run default",
]

# -------------------- Coverage --------------------

# El piso (--cov-fail-under) NO va acá: se aplica en CI sobre la cobertura
# COMBINADA unit+integration (ci.yml). En addopts rompería el run default
# (solo unit), que no ejercita endpoints/DB y mide bajo a propósito.
[tool.coverage.run]
source = ["app"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
